--- a/angular.json
+++ b/angular.json
@@ -151,7 +151,7 @@
       },
       "architect": {
         "build": {
-          "builder": "@angular-devkit/build-angular:ng-packagr",
+          "builder": "@angular-devkit/build-ng-packagr:build",
           "options": {
             "tsConfig": "projects/fullcalendar/tsconfig.lib.json",
             "project": "projects/fullcalendar/ng-package.json"
