--- a/projects/fullcalendar/package.json
+++ b/projects/fullcalendar/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@fullcalendar/angular",
+  "name": "rs-fullcalendar",
   "version": "5.11.0",
   "title": "FullCalendar Angular Component",
   "description": "An official FullCalendar component for Angular",
@@ -20,8 +20,8 @@
     "tslib": "^2.0.0"
   },
   "peerDependencies": {
-    "@angular/common": "9 - 13",
-    "@angular/core": "9 - 13"
+    "@angular/common": "~8.2.14",
+    "@angular/core": "~8.2.14"
   },
   "engines": {
     "node": ">= 6.9.0",
